--- a/src/main/webapp/WEB-INF/pages/testPolaczenia.html
+++ b/src/main/webapp/WEB-INF/pages/testPolaczenia.html
@@ -6,5 +6,6 @@
 	</head>
 	<body>
 		<p th:text="${message}">Test połączenia z bazą danych ...</p>
+		<p th:text="#{congrats}">Gratulacje</p>
 	</body>
 </html>
