dodanie stylizacji CSS

--- a/src/main/webapp/WEB-INF/pages/testPolaczenia.html
+++ b/src/main/webapp/WEB-INF/pages/testPolaczenia.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<meta charset="UTF-8">
+		<link rel="StyleSheet" href="../css/main-css-styles-file.css" type="text/css"
+		media="screen" />
+
+		<meta content="text/html; charset=iso-8859-2"
+			http-equiv="Content-Type" />
+
 		<title>Test polaczenia ...</title>
 	</head>
 	<body>
